resources/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: http2
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.56.103
                      port_value: 8000
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.56.104
                      port_value: 8000
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.56.105
                      port_value: 8000
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.56.102
                      port_value: 8000
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000
